feat: footer links and icons, youtube, linkedin, github

--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
           </div>
         </div>
       </section>
+      <footer class="footer">
+        <div class="social-links">
+          <a href="https://www.youtube.com/@juanescode976" target="_blank" class="social-link"><i class="fab fa-youtube"></i></a>
+          <a href="https://www.linkedin.com/in/juan-esteban-villada-gallego-6015552bb/" target="_blank" class="social-link"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <div class="copyright">
+          © 2025 | Portfolio by JuanEsteban <a href="https://github.com/juanescode" target="_blank" class="github-link"><i class="fab fa-github"></i></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
+
